--- a/index.html
+++ b/index.html
@@ -126,11 +126,23 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>Ronojoy Adhikari is a scientist at The Institute of Mathematical Sciences, Chennai. His research focusses on two main areas, investigating the physics of materials and designing algorithms that make machines mimic human intelligence.</p>
+<p>Ronojoy Adhikari is a scientist at The Institute of Mathematical Sciences,
+Chennai. His research focusses on two main areas, investigating the physics of
+materials and designing algorithms that make machines mimic human intelligence.</p>
 
-<p>Ronojoy is a recipient of the Faculty Research Award from Google Inc and of the DAE-SRC Outstanding Investigator Award from the Department of Atomic Energy, Government of India. He has been Hamied Visiting Lecturer at Cambridge University and Indo-US Science and Technology Fellow at Princeton University and New York University. Ronojoy earned a doctorate in physics from the Indian Institute of Science and then worked as a post-doctoral fellow at the University of Edinburgh.</p>
+<p>Ronojoy is a recipient of the Faculty Research Award from Google Inc and of the
+DAE-SRC Outstanding Investigator Award from the Department of Atomic Energy,
+Government of India. He has been Hamied Visiting Lecturer at Cambridge
+University and Indo-US Science and Technology Fellow at Princeton University
+and New York University. Ronojoy earned a doctorate in physics from the Indian
+Institute of Science and then worked as a post-doctoral fellow at the
+University of Edinburgh before joining The Institute of Mathematical Sciences,
+where he has been professor since 2012</p>
 
-<p>Ronojoy&rsquo;s research has been covered in national and international media, including the BBC and Time Magazine. Ronojoy has a wide interest in music and in his free time is either playing sarodes badly or taking them apart to study their physics.</p>
+<p>Ronojoy&rsquo;s research has been covered in national and international media,
+including the BBC and Time Magazine. Ronojoy has a wide interest in music and
+in his free time is either playing sarodes badly or taking them apart to study
+their physics.</p>
 
 
         <div class="row">
